9/16/2009
	- When determining the nameservers to use, if the
	  sun.net.dns.ResolverConfiguration class returns an empty list, ignore
	  it. (based on an anonymous patch).
	- Make the Name, Record (and all subclasses), RRset, and Zone classes
	  implement Serializable.
	  (based on a patch from Patrick <psp294@users.sourceforge.net>)

9/15/2009
	- Add a constant for the REVOKE DNSKEY flag.
	  (patch from Wolfgang Nagele <dreamguard@users.sourceforge.net>)
	- ReverseMap.fromAddress(String) should support both IPv4 and IPv6
	  addresses.
	  (reported by Stephan Fuhrmann <stfu1und1@users.sourceforge.net>)

8/08/2009
	- The escaping code for text strings should not escape semicolons.

6/23/2009
	- DNSSEC signature validation incorrectly used the TTL of the records
	  being verified, not the original TTL from the RRSIG record, which
	  caused failures when verifying records returned by a caching server.
	  (reported by Samuel Benz <samuel.benz@switch.ch>)

6/15/2009
	- Change the ResolverConfig.refresh() method to only synchronize the
	  assignment to currentConfig, not the code which determines the new
	  configuration.

6/12/2009
	- The TSIG verification routines (TSIG.verify,
	  TSIG.StreamVerifier.verify() now update the Message object with the
	  status of the verification in addition to returning the status.
	
6/03/2009
	- The lists of servers and searchlist entries in ResolverConfig should
	  not be static.
	  (Isabelle Dalmasso <isa@8x8.com>)

5/28/2009
	- The canonical form of an NSEC record was incorrectly computed - the
	  next name should not have its case changed.
	  (David Blacka <davidb@verisign.com>)

	- Add support for NSEC3, NSEC3PARAM, and DLV records.
	  (based on a patch from David Blacka <davidb@verisign.com>)

9/17/2008
	- Fix LOC record rounding.
	  (reported by Klaus Malorny <Klaus.Malorny@knipp.de>)

8/22/2008
	- Type 4 NXDOMAIN responses were incorrectly cached as referrals.
	  (reported by Luis Silva <luisfilsilva@gmail.com>)

8/06/2008