@@ -1,3 +1,7 @@
+9/25/2009
+	- Add support for detecting the configured nameservers on the Android
+	  platform.  (patch from Arnt Gulbrandsen <arnt@gulbrandsen.priv.no>)
+
 9/16/2009
 	- When determining the nameservers to use, if the
 	  sun.net.dns.ResolverConfiguration class returns an empty list, ignore
